--- a/README
+++ b/README
@@ -24,11 +24,12 @@ SEE ALSO
     * WebService::Lucene
 
 AUTHORS
-    * Brian Cassidy <brian.cassidy@nald.ca>
-    * Adam Paynter <adam.paynter@nald.ca>
+    Brian Cassidy <bricas@cpan.org>
+
+    Adam Paynter <adapay@cpan.org>
 
 COPYRIGHT AND LICENSE
-    Copyright 2006 National Adult Literacy Database
+    Copyright 2007 National Adult Literacy Database
 
     This library is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
