--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Catalyst::Model::WebService::Lucene
 
+0.04  Mon Jan 14 2008
+    - Module::Install update, no functional changes
+
 0.03  Fri Oct 26 2007
     - switch to Module::Install
     - minor pod updates
