--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Catalyst::Model::WebService::Lucene
 
+0.05  Thu Nov 19 2009
+    - repackaged with a new version of Module::Install
+
 0.04  Mon Jan 14 2008
     - Module::Install update, no functional changes
 
