--- a/README
+++ b/README
@@ -20,8 +20,9 @@ METHODS
     passes your config options to WebService::Lucene's "new" method.
 
 SEE ALSO
-    * Catalyst
-    * WebService::Lucene
+    *   Catalyst
+
+    *   WebService::Lucene
 
 AUTHORS
     Brian Cassidy <bricas@cpan.org>
@@ -29,7 +30,7 @@ AUTHORS
     Adam Paynter <adapay@cpan.org>
 
 COPYRIGHT AND LICENSE
-    Copyright 2008 National Adult Literacy Database
+    Copyright 2006-2009 National Adult Literacy Database
 
     This library is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
